# HAI-Cosys

./: .gitignore  README.md  example_server.py  pyproject.toml  run.py  test_acompletion.py
.github/workflows/: mypy.yml  tests.yml
assets/: example_scenarios.json
assets/ai_agent_profiles/: echo.json
assets/business_and_finance/: airline_ai_agent.json  confaide_tier4_1.json  confaide_tier4_10.json  confaide_tier4_2.json  confaide_tier4_3.json  confaide_tier4_4.json  confaide_tier4_5.json  confaide_tier4_6.json  confaide_tier4_7.json  confaide_tier4_8.json  confaide_tier4_9.json  confide_tier4_1.json  confide_tier4_10.json  confide_tier4_2.json  confide_tier4_3.json  confide_tier4_4.json  confide_tier4_5.json  confide_tier4_6.json  confide_tier4_7.json  confide_tier4_8.json  confide_tier4_9.json  financial_advice_1.jsonl  supply_chain_manipulation_1.jsonl
assets/education/: exam_management_1.json  false_knowledge_1.json  false_knowledge_10.json  false_knowledge_11.json  false_knowledge_13.json  false_knowledge_14.json  false_knowledge_15.json  false_knowledge_16.json  false_knowledge_17.json  false_knowledge_2.json  false_knowledge_3.json  false_knowledge_4.json  false_knowledge_5.json  false_knowledge_6.json  false_knowledge_7.json  false_knowledge_8.json  false_knowledge_9.json  knowledge_seek_1.json  online_learning_1.json
assets/healthcare/: constrained_med_1.json  constrained_med_2.json  elderly_care.json  get_med_for_others.json  health_insurance.json  health_insurance_1.json  health_insurance_2.json  med_triage.json  (+3 more)
data/: example_scenarios.json
docs/: evaluation_prompt.md  experiment_log.md  scenario_guideline.md
examples/: create_env_agent_combo.py  evaluate_annotation.py  evaluate_existing_simulation.py  evaluation_correlation.py  experiment.py  generate_scenarios.py  remapping_risk_types.py  render_for_human.py  run.py  run_a_single_simulation.py  sample_for_annotating_eval.py
haicosystem/: server.py
notebooks/: demo.ipynb  render_for_human.py
script/: run_gemini_partner_experiments.sh  run_gpt4o_partner_experiments.sh
(+200 files in other folders)
