[tool.poetry]
name = "haicosystem"
version = "0.0.1"
description = "An Ecosystem for Sandboxing Safety Risks in Human-AI Coexisting Environments"
authors = ["Xuhui Zhou <zhouxuhui2018@gmail.com>"]
readme = "README.md"
packages = [{include = "haicosystem"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
sotopia = "0.0.11"
types-requests = "^2.31"
types-tqdm = "^4.66.0.20240417"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
types-setuptools = "*"
ruff = "*"
sotopia = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
mypy = "1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "stubs"
strict = true
plugins = [
    "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
